--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "for test chatbot",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node app.js",
+    "build": "webpack"
+},
+"heroku-run-build-script": true,
   "author": "",
   "license": "ISC",
   "dependencies": {
